(1) feat: GetRecentUpdateList; (2) Add Tls support in code.
