# mikanani-v2/api/mikanani/v2/anime_grpc.pb.go
@@ -20,14 +20,16 @@ import (
 const _ = grpc.SupportPackageIsVersion7
 
 const (
-	MikananiService_ListAnimeMeta_FullMethodName        = "/mikanani.MikananiService/ListAnimeMeta"
-	MikananiService_GetAnimeDoc_FullMethodName          = "/mikanani.MikananiService/GetAnimeDoc"
-	MikananiService_UpdateAnimeDoc_FullMethodName       = "/mikanani.MikananiService/UpdateAnimeDoc"
-	MikananiService_UpdateAnimeMeta_FullMethodName      = "/mikanani.MikananiService/UpdateAnimeMeta"
-	MikananiService_InsertAnimeItem_FullMethodName      = "/mikanani.MikananiService/InsertAnimeItem"
-	MikananiService_DeleteAnimeItem_FullMethodName      = "/mikanani.MikananiService/DeleteAnimeItem"
-	MikananiService_DispatchDownloadTask_FullMethodName = "/mikanani.MikananiService/DispatchDownloadTask"
-	MikananiService_GetAnimeCount_FullMethodName        = "/mikanani.MikananiService/GetAnimeCount"
+	MikananiService_ListAnimeMeta_FullMethodName          = "/mikanani.MikananiService/ListAnimeMeta"
+	MikananiService_GetAnimeDoc_FullMethodName            = "/mikanani.MikananiService/GetAnimeDoc"
+	MikananiService_UpdateAnimeDoc_FullMethodName         = "/mikanani.MikananiService/UpdateAnimeDoc"
+	MikananiService_UpdateAnimeMeta_FullMethodName        = "/mikanani.MikananiService/UpdateAnimeMeta"
+	MikananiService_InsertAnimeItem_FullMethodName        = "/mikanani.MikananiService/InsertAnimeItem"
+	MikananiService_DeleteAnimeItem_FullMethodName        = "/mikanani.MikananiService/DeleteAnimeItem"
+	MikananiService_DispatchDownloadTask_FullMethodName   = "/mikanani.MikananiService/DispatchDownloadTask"
+	MikananiService_GetAnimeCount_FullMethodName          = "/mikanani.MikananiService/GetAnimeCount"
+	MikananiService_GetRecentUpdateList_FullMethodName    = "/mikanani.MikananiService/GetRecentUpdateList"
+	MikananiService_DeleteRecentUpdateById_FullMethodName = "/mikanani.MikananiService/DeleteRecentUpdateById"
 )
 
 // MikananiServiceClient is the client API for MikananiService service.
@@ -42,6 +44,8 @@ type MikananiServiceClient interface {
 	DeleteAnimeItem(ctx context.Context, in *DeleteAnimeItemRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
 	DispatchDownloadTask(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*emptypb.Empty, error)
 	GetAnimeCount(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*GetAnimeCountResponse, error)
+	GetRecentUpdateList(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*GetRecentUpdateListResponse, error)
+	DeleteRecentUpdateById(ctx context.Context, in *DelRecentUpdateByIdRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
 }
 
 type mikananiServiceClient struct {
@@ -124,6 +128,24 @@ func (c *mikananiServiceClient) GetAnimeCount(ctx context.Context, in *emptypb.E
 	return out, nil
 }
 
+func (c *mikananiServiceClient) GetRecentUpdateList(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*GetRecentUpdateListResponse, error) {
+	out := new(GetRecentUpdateListResponse)
+	err := c.cc.Invoke(ctx, MikananiService_GetRecentUpdateList_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *mikananiServiceClient) DeleteRecentUpdateById(ctx context.Context, in *DelRecentUpdateByIdRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	out := new(emptypb.Empty)
+	err := c.cc.Invoke(ctx, MikananiService_DeleteRecentUpdateById_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // MikananiServiceServer is the server API for MikananiService service.
 // All implementations must embed UnimplementedMikananiServiceServer
 // for forward compatibility
@@ -136,6 +158,8 @@ type MikananiServiceServer interface {
 	DeleteAnimeItem(context.Context, *DeleteAnimeItemRequest) (*emptypb.Empty, error)
 	DispatchDownloadTask(context.Context, *emptypb.Empty) (*emptypb.Empty, error)
 	GetAnimeCount(context.Context, *emptypb.Empty) (*GetAnimeCountResponse, error)
+	GetRecentUpdateList(context.Context, *emptypb.Empty) (*GetRecentUpdateListResponse, error)
+	DeleteRecentUpdateById(context.Context, *DelRecentUpdateByIdRequest) (*emptypb.Empty, error)
 	mustEmbedUnimplementedMikananiServiceServer()
 }
 
@@ -166,6 +190,12 @@ func (UnimplementedMikananiServiceServer) DispatchDownloadTask(context.Context, 
 }
 func (UnimplementedMikananiServiceServer) GetAnimeCount(context.Context, *emptypb.Empty) (*GetAnimeCountResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetAnimeCount not implemented")
+}
+func (UnimplementedMikananiServiceServer) GetRecentUpdateList(context.Context, *emptypb.Empty) (*GetRecentUpdateListResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetRecentUpdateList not implemented")
+}
+func (UnimplementedMikananiServiceServer) DeleteRecentUpdateById(context.Context, *DelRecentUpdateByIdRequest) (*emptypb.Empty, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method DeleteRecentUpdateById not implemented")
 }
 func (UnimplementedMikananiServiceServer) mustEmbedUnimplementedMikananiServiceServer() {}
 
@@ -324,6 +354,42 @@ func _MikananiService_GetAnimeCount_Handler(srv interface{}, ctx context.Context
 	return interceptor(ctx, in, info, handler)
 }
 
+func _MikananiService_GetRecentUpdateList_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(emptypb.Empty)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(MikananiServiceServer).GetRecentUpdateList(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: MikananiService_GetRecentUpdateList_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(MikananiServiceServer).GetRecentUpdateList(ctx, req.(*emptypb.Empty))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _MikananiService_DeleteRecentUpdateById_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DelRecentUpdateByIdRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(MikananiServiceServer).DeleteRecentUpdateById(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: MikananiService_DeleteRecentUpdateById_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(MikananiServiceServer).DeleteRecentUpdateById(ctx, req.(*DelRecentUpdateByIdRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // MikananiService_ServiceDesc is the grpc.ServiceDesc for MikananiService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -362,6 +428,14 @@ var MikananiService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GetAnimeCount",
 			Handler:    _MikananiService_GetAnimeCount_Handler,
+		},
+		{
+			MethodName: "GetRecentUpdateList",
+			Handler:    _MikananiService_GetRecentUpdateList_Handler,
+		},
+		{
+			MethodName: "DeleteRecentUpdateById",
+			Handler:    _MikananiService_DeleteRecentUpdateById_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
